# cyphr-OIDC

./: .env.example  .envrc  .gitignore  README.md  apm.lock.yaml  apm.yml  docker-compose.yml  flake.nix  justfile  lefthook.yml
.github/workflows/: test.yml
bridge/: Dockerfile  go.mod  go.sum  main.go
bridge/crypto/: coz.go  coz_test.go  multihash.go  multihash_test.go
bridge/e2e/: e2e_test.go
bridge/handlers/: callback.go  callback_test.go  challenge.go  challenge_test.go  login.go  token_callback.go  token_callback_test.go  verify.go  verify_test.go
bridge/internal/testutil/: testutil.go
bridge/storage/: storage.go  storage_test.go  testing.go
bridge/templates/: login.html
cyphrmask/: manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.js
cyphrmask/src/: background.js  content.js
cyphrmask/src/__tests__/: background.test.js  content.test.js  setup.js
cyphrmask/src/options/: options.html  options.tsx
cyphrmask/src/popup/: popup.css  popup.html  popup.tsx
cyphrmask/wasm-crypto/: Cargo.toml
cyphrmask/wasm-crypto/src/: lib.rs
docs/: DAY1.md  DAY2.md  PLAN-DAY2.md  PLAN.md
e2e/: extension.spec.ts  oidc-flow.spec.ts  package.json  playwright.config.ts
e2e/fixtures/: setup.ts
e2e/test-data/: identity.ts
