[package]
name = "cyphr-crypto"
version = "0.1.0"
edition = "2021"
description = "Wasm crypto module for CyphrMask - provides bit-perfect Coz signing"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
p256 = { version = "0.13", features = ["ecdsa"] }
ecdsa = "0.16"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
